--- a/.github/workflows/build-push-gcr.yml
+++ b/.github/workflows/build-push-gcr.yml
@@ -1,14 +1,46 @@
-name: testing credentials
-on: [push]
+name: Build and push Docker image
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Use Service Account
-        run: |
-          echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" > service_account.json
-          cat service_account.json
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Cloud SDK
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: manulabs-447017  # Added project_id here
+        
+    - name: Configure Docker for Artifact Registry
+      run: gcloud auth configure-docker us-docker.pkg.dev --quiet  # Added --quiet flag
+        
+    - name: Set image tag
+      run: echo "IMAGE_TAG=$(date +%s)" >> $GITHUB_ENV
+        
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag us-docker.pkg.dev/manulabs-447017/node-user-service/app:${{ env.IMAGE_TAG }}
+      
+    - name: Push the Docker image
+      run: docker push us-docker.pkg.dev/manulabs-447017/node-user-service/app:${{ env.IMAGE_TAG }}
+        
+    - name: Update instance template
+      run: |
+        gcloud compute instance-templates create-with-container node-user-service-${{ env.IMAGE_TAG }} \
+          --container-image us-docker.pkg.dev/manulabs-447017/node-user-service/app:${{ env.IMAGE_TAG }} \
+          --region us-central1  # Added region
+          
+    - name: Update managed instance group
+      run: |
+        gcloud compute instance-groups managed rolling-action start-update node-user-service \
+          --version template=node-user-service-${{ env.IMAGE_TAG }} \
+          --zone=us-central1-a \
+          --max-surge 1 \  # Added rolling update parameters
+          --max-unavailable 0
