updated secret key

--- a/.github/workflows/build-push-gcr.yml
+++ b/.github/workflows/build-push-gcr.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/auth@v2
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: manulabs-447017  # Added project_id here
         
     - name: Configure Docker for Artifact Registry
